--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <h2>Our Special offers</h2>
           <p>opened since 90's</p>
         </div>
-        <div class="offres-items">
+        <div class="offers-items">
           <div>
             <img src="./img/offer1.png">
             <div class="offer description">
